@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-07-18T16:14:22Z",
+  "timestamp" : "2022-07-19T00:57:22Z",
   "count_outdated" : 427,
   "uniques_outdated" : 31,
-  "count" : 440,
+  "count" : 441,
   "uniques" : 36,
   "views" : [
     {
@@ -35,8 +35,8 @@
     },
     {
       "timestamp": "2022-07-18T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
+      "count": 3,
+      "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
