@@ -1,5 +1,5 @@
 {
-  "count": 13,
+  "count": 14,
   "uniques": 2,
   "views": [
     {
@@ -24,7 +24,7 @@
     },
     {
       "timestamp": "2022-07-18T00:00:00Z",
-      "count": 2,
+      "count": 3,
       "uniques": 1
     }
   ]
