@@ -1,3 +1,10 @@
+2022-07-19T00:57:22Z:
+* notice: last 14d: unq all: 2 14
+* notice: prev accum: outdated-unq outdated-all / unq all: 31 427 / 36 440
+* notice: next accum: outdated-unq outdated-all / unq all: 31 427 / 36 441
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +3 -0 -0 / 1 3
+* notice: removed / changed dates: [] / [2022-07-18]
+
 2022-07-18T16:14:22Z:
 * notice: last 14d: unq all: 2 13
 * notice: prev accum: outdated-unq outdated-all / unq all: 31 427 / 36 439
